@startuml
title Domæneanalyse for UC1


class Mikrofon
class Startknap

class Attacksensor{ 
bool attackStatus
}

object Spiller <<Actor>> #Tomato

class SumoBot {
int liv
int retning
int hastighed
}

class Motor
{
int retning
int hastighed
}

object CentralComputer

class Styringsenhed{
int retning
int hastighed
}

Mikrofon - Spiller : Påvirker <
Spiller -- Startknap : Påvirker >
Spiller - Display : Viser <


Mikrofon  --  Styringsenhed : Opfanger signal fra <
Display  ---  CentralComputer : Opdatere <
Startknap -- CentralComputer : Giver besked til start >

Styringsenhed - CentralComputer : Giver retning og hastighed >

Attacksensor  -  SumoBot : Giver info om attack >
CentralComputer -- SumoBot : Giver retning og hastighed >
CentralComputer -- SumoBot : Giver info om attack <
SumoBot -- Motor : Sætter retning og hastighed >
SumoBot -- Motor : Bevæger <


@enduml